# document-parser

./: hello.py  main.py
rag-document-parser-app-1/: README.md  pyproject.toml  requirements.txt
rag-document-parser-app-1/docs/: metadata_schema.md
rag-document-parser-app-1/scripts/: ingest_documents.py  rebuild_index.py  run_benchmarks.py
rag-document-parser-app-1/src/api/: main.py
rag-document-parser-app-1/src/api/routers/: __init__.py  ingest.py  query.py
rag-document-parser-app-1/src/config/: settings.py
rag-document-parser-app-1/src/embeddings/: embedder.py  models.py
rag-document-parser-app-1/src/evaluation/: benchmark_runner.py  metrics.py
rag-document-parser-app-1/src/ingestion/: chunker.py  metadata_schema.py  normalizer.py
rag-document-parser-app-1/src/llm/: __init__.py  prompts.py  responder.py
rag-document-parser-app-1/src/logging_utils/: __init__.py  audit_logger.py
rag-document-parser-app-1/src/retrieval/: filters.py  retriever.py
rag-document-parser-app-1/src/storage/: vector_store.py
rag-document-parser-app-1/src/ui/: web_app.py
rag-document-parser-app-1/tests/: test_embeddings.py  test_ingestion.py  test_llm_pipeline.py  test_retrieval.py
rag-document-parser-app/docs/: architecture.md  benchmarks.md
